examples/test/testpolicy11466.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11466
  namespace: namespace33
spec:
  podSelector:
    matchLabels:
      key0: value1
      key4: value48
      key41: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value32
      podSelector:
        matchLabels:
          key33: value16
